...
        settings.errorMessages.collectAsState().value.forEach {
            Text(text = it.message)
        }

        Row(verticalAlignment = Alignment.CenterVertically) {
            BooleanSettingSwitch(
                label = "Center Spread",
                uiState = settings.centerSpreadUiState.collectAsState().value,
                setValue = settings.setCenterSpread
            )
        }
        Row(
            Modifier.clickable(onClick = {
...
